[package]
name = "playback"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[example]]
name = "playback_blob"

[dev-dependencies]
anyhow = { workspace = true }
brotli = { workspace = true }
byteorder = { workspace = true }
bytes = { workspace = true }
nalgebra = "*"
nalgebra-glm = "0.12.0"
pastel = "0.8.1"
serde_json = { workspace = true }
uncage = { workspace = true }
uncage-model = { workspace = true }
uncage-protos = { workspace = true }
